<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="Welcome">Welcome :-)</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="score_board">Score Board</string>
    <string name="board">Board</string>
    <string name="player">Players</string>
    <string name="letter">Letter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
