<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brenda.tic_tac_toe.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="8dp" />
        <Button
            android:id="@+id/resume_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="8dp" />
        <Button
            android:id="@+id/score_board_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_board"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
