<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:layout_toLeftOf="@id/five"

                />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:layout_centerVertical="true"

                />

            <Button
                android:id="@+id/players1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_toLeftOf="@id/players2"/>

            <Button
                android:id="@+id/players2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:layout_centerVertical="true"

                />

            <Button
                android:id="@+id/letterX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:layout_toLeftOf="@id/letterO"/>

            <Button
                android:id="@+id/letterO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


        <Button
            android:id="@+id/playButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="Play"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>